# Stumartcot-Construction

./: README.md  blog.html  bring_users.json  briq_send_id.json  cart.html  construction-consultants.html  contact.html  factories.html  flask_cli.py  index.html  indexnow-postman-collection.json  init_migrations.py  main.py  manage_db.py  product-detail.html  products.html  pyproject.toml  qr.py  requirements.txt  retail-shops.html  script.js  setup.py  showrooms.html  sitemap.xml  styles.css  technical-support.html
.github/workflows/: test.yml
instance/: database.db
migrations/versions/: 81d2664eba68_add_productimage_model_and_remove_image_.py
website/: __init__.py  auth.py  error_handlers.py  indexnow_service.py  models.py  to_do_views.py  views.py
website/static/: main.css  main.js  script.js  styles.css
website/static/uploads/: photo-1580398562556-d33329a0f29b_20250902_162940_f9769afe.avif  premium_photo-1676154517862-3d39720f63f5_20250902_162853_0db8a98e.avif
website/templates/: about.html  add_category.html  add_product.html  admin_dashboard.html  base.html  base2.html  blog.html  cart.html  categories.html  category_products.html  construction-consultants.html  contact.html  edit_category.html  edit_product.html  error.html  factories.html  home.html  langingPage.html  link-tree.html  login.html  manage_categories.html  manage_products.html  manage_users.html  product-detail.html  product-single.html  product_detail.html  products.html  retail-shops.html  showrooms.html  sign_up.html  sitemap.xml  technical-support.html  user_dashboard.html
